--- a/Views/Partials/userHeader.ejs
+++ b/Views/Partials/userHeader.ejs
@@ -114,6 +114,9 @@
                                     <li>
                                         <a class="" href="/allCategory">All category</a>
                                     </li>
+                                    <li>
+                                        <a class="" href="/coupon">Coupons</a>
+                                    </li>
                                     <li><a href="#">Pages <i class="fi-rs-angle-down"></i></a>
                                         <ul class="sub-menu">
                                             <li><a href="/allCategory">All Category</a></li>
@@ -121,11 +124,8 @@
                                             <li><a href="/userLogin">Login</a></li>
                                             <li><a href="/wishlist">Wishlist</a></li>
                                             <li><a href="/cart">Cart</a></li>
-                                            <li><a href="#">Contact</a></li>
+                                            <li><a href="/coupon">Coupon</a></li>
                                         </ul>
-                                    </li>
-                                    <li>
-                                        <a href="page-contact.html">Contact</a>
                                     </li>
                                 </ul>
                             </nav>
