--- a/Views/User/user-checkout.ejs
+++ b/Views/User/user-checkout.ejs
@@ -128,7 +128,8 @@
                                                     <input type="text" id="couponCode" placeholder="Enter Coupon Code...">
                                                 </div>
                                                 <div class="form-group">
-                                                    <button class="btn btn-md" id="applyCoupon" name="applyCoupon">Apply Coupon</button>
+                                                    <button class="btn btn-md mr-10" id="applyCoupon" name="applyCoupon">Apply Coupon</button>
+                                                    <a href="/coupon" class="btn btn-md" id="showCoupon" name="showCoupon">Show Coupon</a>
                                                     <button class="btn btn-md" id="removeCoupon" name="removeCoupon" style="display: none; background-color: red;">Remove Coupon</button>
                                                 </div>
                                             </form>
