--- a/Views/User/user-profile.ejs
+++ b/Views/User/user-profile.ejs
@@ -229,9 +229,9 @@
                                                     <div class="col-lg-6"><%= user.email %></div>
                                                 </div>
                                                 <div class="row">
-                                                    <div class="col-lg-2">Password</div>
+                                                    <div class="col-lg-2">Refferal Code</div>
                                                     <div class="col-lg-1">:</div>
-                                                    <div class="col-lg-6"><%= user.password %></div>
+                                                    <div class="col-lg-6"><%= user.referralCode %></div>
                                                 </div>
                                                 <div class="row">
                                                     <div class="col-lg-2">Phone No.</div>
