--- a/Views/User/user-signup.ejs
+++ b/Views/User/user-signup.ejs
@@ -48,6 +48,9 @@
                                             <input type="password" id="USConfirmPassword" name="USConfirmPassword" placeholder="Confirm Password">
                                             <div class="text-danger" id="checkPasswordMatch" style="display: none;">Password doesn't match</div>
                                         </div>
+                                        <div class="form-group">
+                                            <input type="password" id="referral" name="referral" placeholder="Referral code... (OPTIONAL)">
+                                        </div>
                                         
                                         <div class="login_footer form-group">
                                             <div class="chek-form">
