--- a/Views/User/homePage.ejs
+++ b/Views/User/homePage.ejs
@@ -32,7 +32,7 @@
             </div>
         <% }) %> -->
         
-        
+        <!-- Banner -->
         <section class="home-slider position-relative pt-50">
             <div class="hero-slider-1 dot-style-1 dot-style-1-position-1">
                 <% Banners.forEach((banner)=>{ %>
