--- a/Views/User/user-orderView.ejs
+++ b/Views/User/user-orderView.ejs
@@ -216,19 +216,25 @@
                         })
                     
                         .then((data)=>{
-                            console.log(data);
-                        
-                            Swal.fire({
-                                position : 'top-center',
-                                icon : 'success',
-                                title : 'Order return request send',
-                                showConfirmButton: false,
-                                timer: 1500
-                            })
-    
-                            setTimeout(()=>{
-                                window.location.href = `/orderView?orderId=${orderId}`
-                            },1500)
+                            if(data.reqAlreadySend){
+                                console.log(data);
+                                Swal.fire({
+                                    position : 'top-center',
+                                    icon : 'error',
+                                    title : 'Already request  send',
+                                    showConfirmButton: false,
+                                    timer: 1500
+                                })
+                            }else{
+                                console.log(data);
+                                Swal.fire({
+                                    position : 'top-center',
+                                    icon : 'success',
+                                    title : 'Order return request send',
+                                    showConfirmButton: false,
+                                    timer: 1500
+                                })
+                            }
                         })
     
                         .catch((err)=>{
