--- a/Views/Admin/adminAddProduct.ejs
+++ b/Views/Admin/adminAddProduct.ejs
@@ -14,7 +14,7 @@
     <meta property="og:url" content="">
     <meta property="og:image" content="">
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="/adminAsset/imgs/theme/favicon.svg">
+    <link rel="shortcut icon" type="image/x-icon" href="../../Public/userAssets/imgs/Logo/Televisao Logo.png">
     <!-- Template CSS -->
     <link href="/adminAsset/css/main.css" rel="stylesheet" type="text/css" />
     <link  href="../../node_modules/cropperjs/src/css/cropper.css" rel="stylesheet">
