--- a/Views/Admin/adminViewOrder.ejs
+++ b/Views/Admin/adminViewOrder.ejs
@@ -14,7 +14,7 @@
     <meta property="og:url" content="">
     <meta property="og:image" content="">
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="/adminAsset/imgs/theme/favicon.svg">
+    <link rel="shortcut icon" type="image/x-icon" href="../../Public/userAssets/imgs/Logo/Televisao Logo.png">
     <!-- Template CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="/adminAsset/css/main.css" rel="stylesheet" type="text/css" />
