--- a/Views/Partials/userHeader.ejs
+++ b/Views/Partials/userHeader.ejs
@@ -14,7 +14,7 @@
     <meta property="og:url" content="">
     <meta property="og:image" content="">
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="/userAssets/imgs/theme/favicon.svg">
+    <link rel="shortcut icon" type="image/x-icon" href="../../Public/userAssets/imgs/Logo/Televisao Logo.png">
     <!-- Template CSS -->
     <link rel="stylesheet" href="/userAssets/css/maind134.css?v=3.4">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
